--- a/dillo/templates/dillo/posts_grid_embed.pug
+++ b/dillo/templates/dillo/posts_grid_embed.pug
@@ -6,38 +6,40 @@
 li.post-container(
 	data-post_id="{{ post.hash_id }}",
 )
-	.post-thumbnail
-		| {% include 'dillo/components/_post_media_grid.pug' with post=post %}
-	.post-details
-		.card-header-thumbnail
+	| {% include 'dillo/components/_post_media_grid.pug' with post=post %}
+
+	.post-grid-details
+		.post-grid-avatar
 			| {% include 'dillo/components/_profile_avatar.pug' with user=post.user size='small' %}
-		a.card-header-title(
-			class="js-show-modal",
-			data-content_url="{% url 'post_detail' post.hash_id %}",
-			data-toggle='modal',
-			data-target='#modal-post-detail',
-			data-post_id="{{ post.hash_id }}",
-			href="{% url 'post_detail' post.hash_id %}")
 
-			| {% if post.postmedia_set.first.content_object.views_count %}
-			span
-				| {{ post.postmedia_set.first.content_object.views_count|compact_number }} {% trans 'views' %}
-				#[strong.px-2 ·]
-				| {{ post.published_at | timesince | shorten_timesince }} {% trans 'ago' %}
-			| {% endif %}
+		.post-grid-info
+			a.post-author(href="")
+				span {{ post.user.username }}
 
-			| {% if post.comments_count %}
-			span
-				| {{ post.comments_count }} #[i.i-comment]
-			| {% endif %}
+			a.post-grid-meta(
+				class="js-show-modal",
+				data-content_url="{% url 'post_detail' post.hash_id %}",
+				data-toggle='modal',
+				data-target='#modal-post-detail',
+				data-post_id="{{ post.hash_id }}",
+				href="{% url 'post_detail' post.hash_id %}")
 
-			| {% if post.likes.count %}
-			span
-				| {{ post.likes.count }} #[i.i-heart]
-			| {% endif %}
+				//- Views.
+				| {% if post.postmedia_set.first.content_object.views_count %}
+				span
+					| #[i.i-eye] {{ post.postmedia_set.first.content_object.views_count|compact_number }}
+				| {% endif %}
 
-			span.date
-				| {{ post.published_at | timesince | compact_timesince }} {% trans 'ago' %}
+				//- Comments.
+				| {% if post.comments_count %}
+				span  #[i.i-comment] {{ post.comments_count }}
+				| {% endif %}
+
+				//- Likes.
+				| {% if post.likes.count %}
+				span  #[i.i-heart] {{ post.likes.count }}
+				| {% endif %}
+
 
 | {% endif %}
 
