--- a/dillo/templates/account/password_reset.pug
+++ b/dillo/templates/account/password_reset.pug
@@ -10,20 +10,20 @@ form.card.account(method='POST', action="{% url 'account_reset_password' %}")
 	.card-header
 		h1.card-title {% trans "Forgotten your password?" %}
 
-	.card-body.px-5
+	.card-body
 		| {% if user.is_authenticated %}
-		.text-warning.text-center
-			{% include "account/snippets/already_logged_in.html" %}
+		p {% include "account/snippets/already_logged_in.html" %}
 		| {% endif %}
 
-		p.lead.text-center
+		p
 			| {% trans "Enter your e-mail and we'll write you how to reset it." %}
 			| {% csrf_token %}
 			| {{ form | crispy  }}
 
 	.card-cta
-		input.btn.btn-primary(type='submit', value="{% trans 'Reset My Password' %}")
+		button.btn.btn-primary(type='submit')
+			span {% trans 'Reset My Password' %}
 
-	.card-footer.text-secondary.text-center
+	.card-footer
 		| {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
 | {% endblock %}
