--- a/dillo/templates/dillo/profile_setup.pug
+++ b/dillo/templates/dillo/profile_setup.pug
@@ -27,6 +27,8 @@
 
 			.card-cta
 				button.btn.btn-primary(type="submit")
-					span {% trans 'Next' %}
+					span
+						span {% trans 'Next' %}
+						i.i-chevron-right
 
 | {% endblock %}
