--- a/dillo/templates/account/password_change.pug
+++ b/dillo/templates/account/password_change.pug
@@ -5,10 +5,13 @@
 | {% block head_title %}{% trans "Change Password" %}{% endblock %}
 | {% block content_account_edit_form %}
 .card-header
-	h1 {% trans "Change Password" %}
+  h1 {% trans "Change Password" %}
 .card-body
-	form.password_change(method='POST', action="{% url 'account_change_password' %}")
-		| {% csrf_token %}
-		| {{ form | crispy }}
-		input.btn.btn-primary(type='submit', name='action', value='{% trans "Change Password" %}') {% trans "Change Password" %}
+  form.password_change(method='POST', action="{% url 'account_change_password' %}")
+    | {% csrf_token %}
+    | {{ form | crispy }}
+
+  .card-cta
+    button.btn.btn-primary(type="submit", name="action")
+      span {% trans "Change Password" %}
 | {% endblock %}
