--- a/dillo/templates/account/password_set.pug
+++ b/dillo/templates/account/password_set.pug
@@ -4,9 +4,13 @@
 | {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 | {% block content_account_edit_form %}
+
 h1 {% trans "Set Password" %}
+
 form.password_set(method='POST', action="{% url 'account_set_password' %}")
   | {% csrf_token %}
   | {{ form | crispy }}
-  input.btn.btn-primary(type="submit", name="action", value="{% trans 'Set Password' %}")
+
+  button.btn.btn-primary(type="submit", name="action")
+    span {% trans 'Set Password' %}
 | {% endblock content_account_edit_form%}
