--- a/dillo/templates/dillo/profile_edit.pug
+++ b/dillo/templates/dillo/profile_edit.pug
@@ -16,10 +16,9 @@ form.profile-edit(action="{% url 'profile_edit' %}", method="post", enctype="mul
 				| {{ form | crispy }}
 				| {% include 'dillo/components/_formset_link_list.pug' %}
 
-				.d-flex.border-top.py-3.mt-3
-					button.btn.btn-primary.px-5.ml-auto(
-						type="submit")
-						span {% trans 'Save Changes' %}
+			.card-cta
+				button.btn.btn-primary(type="submit")
+					span {% trans 'Save Changes' %}
 
 | {% endblock content_account_edit_form %}
 
