--- a/dillo/templates/dillo/components/_navigation_main.pug
+++ b/dillo/templates/dillo/components/_navigation_main.pug
@@ -89,7 +89,7 @@ nav.nav-primary.navbar.navbar-expand
 					title='{% trans "Log In" %}')
 					span {% trans "Log In" %}
 
-				a.btn.btn-link-bg-primary(
+				a.btn.btn-link-primary(
 					href="{% url 'account_signup' %}",
 					title='{% trans "Sign Up" %}')
 					span {% trans "Sign Up" %}
