--- a/dillo/templates/dillo/design_system.pug
+++ b/dillo/templates/dillo/design_system.pug
@@ -138,7 +138,9 @@
 
                 .card-cta
                   button.btn.btn-primary(type="submit")
-                    span Next
+                    span
+                      span 'Next'
+                      i.i-chevron-right
 
   hr
 
