--- a/dillo/templates/dillo/jobs/job_detail.pug
+++ b/dillo/templates/dillo/jobs/job_detail.pug
@@ -22,7 +22,7 @@
 					| {% if job.user == request.user %}
 					| {% url 'job-update' job.pk as edit_url %}
 					| {% trans 'Edit Job' as edit_label %}
-					| {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label class="btn-link-bg-primary" %}
+					| {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label %}
 					| {% endif %}
 
 			h1.pt-3 {{ job.title }}
