--- a/dillo/templates/dillo/post_detail_embed_base.pug
+++ b/dillo/templates/dillo/post_detail_embed_base.pug
@@ -11,7 +11,12 @@ section.post-view-info.col-scrollable
 	| {% include 'dillo/components/_post_meta.pug' with post=post is_post_details=True %}
 
 	| {% if request.user.is_anonymous %}
-	| #[a(href="{% url 'account_login' %}") Sign in]&nbsp;to comment.
+	.btn-toolbar-row
+		| {% url 'account_login' as btn_create_url %}
+		| {% trans 'Log in to comment' as btn_label %}
+		| {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" %}
+
+	hr
 	| {% endif %}
 
 	.comments-container
