Comments: Smaller icon for cancel.

--- a/dillo/templates/dillo/components/_comment_form.pug
+++ b/dillo/templates/dillo/components/_comment_form.pug
@@ -12,7 +12,7 @@
 			| {{ form_comment.parent_comment_id }}
 
 			.btn-toolbar-row
-				button.btn.btn-link.btn-icon(
+				button.btn.btn-link(
 					data-toggle="tooltip",
 					title="{% trans 'Cancel' %}",
 					type='button',
