--- a/dillo/templates/dillo/posts_list_embed.pug
+++ b/dillo/templates/dillo/posts_list_embed.pug
@@ -27,7 +27,7 @@ li.post-container(
 | {% endfor %}
 
 | {% if page_obj.has_next %}
-li
+li.posts-load-more
 	| {% include 'dillo/components/_button_load_more.pug' with js_class='js-load-more' page_obj=page_obj %}
 | {% endif %}
 
