UI: menu expand button padding on mobile

--- a/dillo/templates/dillo/components/_navigation_main.pug
+++ b/dillo/templates/dillo/components/_navigation_main.pug
@@ -5,7 +5,8 @@ nav.nav-primary.navbar.navbar-expand
 	.container
 		.navbar-menu
 			button.btn.btn-link.nav-sidebar-toggle(class='js-nav-sidebar-toggle')
-				i.i-menu
+				span
+					i.i-menu
 			.navbar-is-shown-modal-post-detail
 				| {% include 'dillo/components/_button_modal_close.pug' %}
 
