--- a/dillo/templates/dillo/components/_navigation_main.pug
+++ b/dillo/templates/dillo/components/_navigation_main.pug
@@ -81,7 +81,8 @@ nav.nav-primary.navbar.navbar-expand
 					type='button',
 					title='{% trans "Search" %}',
 					data-toggle="tooltip")
-					i.i-search
+					span
+						i.i-search
 
 			.btn-toolbar-row
 				| {% if request.user.is_anonymous %}
