Use Post instead of PostWithMedia
In several location it is not necessary to be too specific about
the post type, so we use the Post model.

--- a/dillo/templates/dillo/components/_post_header.pug
+++ b/dillo/templates/dillo/components/_post_header.pug
@@ -86,7 +86,7 @@
 						| {% if request.user.is_superuser %}
 						.dropdown-divider
 						a.dropdown-item(
-							href="{% url 'admin:dillo_post_change' post.id %}",
+							href="{% url 'admin:dillo_postwithmedia_change' post.id %}",
 							title='{% trans "See Post in Whoosh" %}')
 							i.i-coffee
 							| {% trans "Post" %}
