UI: Fixes for notifications.

--- a/dillo/templates/dillo/components/_notifications.pug
+++ b/dillo/templates/dillo/components/_notifications.pug
@@ -1,6 +1,8 @@
+| {% load i18n %}
+
 .notifications-container
 	.notifications-header
-		span.text-muted Notifications
+		span {% trans 'Activity' %}
 	.notifications-content
 		.p-5.text-center
 			.spinner-border.text-muted
