UI: Like buttons wider when label is present

--- a/dillo/templates/dillo/components/_button_like.pug
+++ b/dillo/templates/dillo/components/_button_like.pug
@@ -3,7 +3,7 @@
 
 | {% if request.user.is_authenticated %}
 button.btn(
-	class="js-like-toggle{% if ob|is_liked:request.user %} is-liked{% endif %}{% if icon_only %} btn-icon{% endif %} {{ classes }}",
+	class="js-like-toggle{% if ob|is_liked:request.user %} is-liked{% endif %}{% if icon_only %} btn-icon{% else %} btn-block{% endif %} {{ classes }}",
 	data-like_toggle_url="{% url 'like_toggle' content_type_id=ob.content_type_id object_id=ob.id %}",
 	data-toggle="{% if icon_only %}tooltip{% endif %}", data-placement="bottom",
 	title="{% if ob|is_liked:request.user %}{% trans 'Unlike' %}{% else %}{% trans 'Like' %}{% endif %}",
