Dropzone: Increase timeout to 2 minutes

--- a/dillo/templates/dillo/post_create.pug
+++ b/dillo/templates/dillo/post_create.pug
@@ -52,6 +52,7 @@ script.
 		addRemoveLinks: true,
 		thumbnailHeight: 250,
 		thumbnailWidth: 250,
+		timeout: 120000,
 		acceptedFiles: "{{ MEDIA_UPLOADS_ACCEPTED_MIMES | join:',' }}",
 		dictDefaultMessage: '{% trans "here you can drop multiple images, videos, or tap to browse" %}',
 		init: function () {
