UI: Post meta use 1 instead of one

--- a/dillo/templates/dillo/components/_post_meta.pug
+++ b/dillo/templates/dillo/components/_post_meta.pug
@@ -9,7 +9,7 @@
 		| {% if post.comments_count %}
 		li.post-meta-link
 			| {% blocktrans count post.comments_count as amount %}
-			| one comment
+			| 1 comment
 			| {% plural %}
 			| {{ amount }} comments
 			| {% endblocktrans %}
